fixed overflow on homepage

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -8,12 +8,12 @@
 
 
 // GLOBAL STYLES
-html {
-  box-sizing: border-box;
-  overflow-x: hidden;
-  height: 100vh;
-  width: 100vw;
-}
+// html {
+//   box-sizing: border-box;
+//   overflow: hidden;
+//   height: 100vh;
+//   width: 100vw;
+// }
 
 // * {
 //   box-sizing: border-box;
@@ -23,10 +23,10 @@ html {
 body {
   padding: 0;
   margin: 0;
-  // height: 10vh;
-  // width: 100vw;
-  // height: 100%;
-  // width: 100%;
+  box-sizing: border-box;
+  overflow: hidden;
+  height: 100vh;
+  width: 100vw;
 }
 
 div {
